tdf#151610 chart colors should be the same regardless of the desktop theme

Change-Id: I47ae80f744401bd13452ec8879cb8f420e35b9ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142383
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit f8ad054de38a6592b60ab850e938e6e81ec4cc0d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142310
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>